# telegram_sa_chat_bot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  database.py  docker-compose.grafana.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  dockerfile  generators.py  get_remains.py  google_sheets_class.py  handlers.py  init_db.py  pyproject.toml  requirements.txt  reset_db.py  run.py
.github/workflows/: ci.yaml  deploy.yaml
ai_module/: generators.py  open_ai_requests_class.py
assets/: superbanking.json
axiomai/: config.py  constants.py
axiomai/application/: dto.py
axiomai/application/exceptions/: buyer.py  cabinet.py  cashback_table.py  common.py  payment.py  superbanking.py  user.py
axiomai/application/interactors/: cancel_buyer.py  create_buyer.py  create_cabinet.py  create_cashback_table.py  create_superbanking_payment.py  create_user.py  observe_balance_notifications.py  observe_cashback_tables.py  observe_inactive_reminders.py  sync_cashback_tables.py
axiomai/infrastructure/: chat_history.py  di.py  google_sheets.py  logging.py  message_debouncer.py  openai.py  superbanking.py
axiomai/infrastructure/database/: transaction_manager.py
axiomai/infrastructure/telegram/: common.py  text.py
axiomai/observer/: __main__.py
axiomai/tgbot/: __main__.py  bot_commands.py
axiomai/tgbot/filters/: ignore_self_message.py
axiomai/tgbot/handlers/: __init__.py  admin_confirms.py  auto_payments.py  buy_leads.py  confirm_screenshots.py  create_cashback_table.py  exception.py  link_business_account.py  my_cabinet.py  process_clients.py  refill_balance.py  start.py
db/: chat_history.db  database.py
google_sheets/: google_sheets_class.py
grafana/: grafana-datasources.yaml
handlers/: __init__.py  agreement_handler.py  callback_handler.py  callback_handlers.py  handlers.py  keyboards.py  message_handler.py  message_handlers.py  photo_handler.py  question_flow.py  requisites_handler.py  subscribtion_handler.py  unexpected_text_handler.py
handlers/keyboards/: get_agreement_keyboard.py  get_subscription_check_keyboard.py  get_yes_no_keyboard.py
handlers/questions_handlers/: question_feedback_done_handler.py  question_flow_handler.py  question_product_ordered_handler.py  question_shk_handler.py  questiong_order_receive_handler.py
handlers/states/: user_flow.py
migrations/: env.py
migrations/versions/: 23d1363dc937_add_live_config_columns_to_cashback_.py  4a7805eae24d_add_leads_balance_to_cabinets.py  70ae319d4f41_first_init.py
src/: get_remains.py
src/ai_module/: open_ai_requests_class.py
src/apis/: google_sheets_class.py  open_ai_requests_class.py
src/app/clients_bot/: run.py
src/app/sellers_bot/: run.py
src/bot/: __init__.py  agreement_handler.py  message_handler.py  photo_handler.py  requisites_handler.py  subscribtion_handler.py  unexpected_text_handler.py
src/bot/handlers/: agreement_handler.py  message_handler.py  photo_handler.py  quiz_handler.py  requisites_handler.py  subscribtion_handler.py  unexpected_text_handler.py
src/bot/keyboards/: get_yes_no_keyboard.py
src/bot/middlewares/: cabinet_context.py  check_redis_telegram_id.py  ignore_bussiness_messages.py  media_group.py
src/bot/questions_handlers/: question_feedback_done_handler.py  question_flow_handler.py  question_product_ordered_handler.py  question_shk_handler.py  questiong_order_receive_handler.py
src/bot/states/: client.py  seller.py  user_flow.py
src/bot/utils/: get_reference_image.py  inactivity_checker  inactivity_checker.py  is_subscribe_checking.py  last_activity.py
src/bots/clients_bot/: run.py
src/bots/sellers_bot/: run.py
src/core/: config.py  constants.py  di.py  init_db.py  settings_env.py
src/db/: base.py  config.py  database.py  models.py
src/google_sheets/: google_sheets_class.py
src/infrastructure/apis/: google_sheets_class.py  open_ai_requests_class.py  (+1 more)
src/micro_services/: get_remains.py
src/services/: google_sheets_class.py  open_ai_requests_class.py  string_converter_class.py
src/tools/: parse_telegram_ids_from_result_json.py  string_converter_class.py
tests/: test_cashback_article_common.py  test_create_superbanking_payment.py  test_message_debouncer.py  test_observe_balance_notifications.py  test_superbanking.py  test_superbanking_payout_gateway.py
tests/e2e/: conftest.py  mocks.py  test_buy_leads.py  test_create_seller.py  test_create_superbanking_payment.py  test_observe_balance_notifications.py  test_observe_cashback_tables.py  test_observe_inactive_reminders.py  test_sync_cashback_tables.py
vector/: vector.yaml
(+233 files in other folders)
