[project]
name = "telegram-ai-chat-bot"
version = "0.1.0"
description = "Telegram cashback bots (sellers + clients)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogoogle>=5.17.0",
    "aiogram>=3.24.0",
    "aiogram-dialog>=2.4.0",
    "alembic>=1.18.1",
    "dishka>=1.7.2",
    "openai>=2.15.0",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "mimesis>=19.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers==4.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "S101", # Use of `assert` detected
    "S104", # Possible binding to all interfaces
    "S105", # Possible hardcoded password assigned to: "malformed_token"
    "S106", # Possible hardcoded password assigned to argument:
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "PLR0913", # Too many arguments in function definition
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "TRY003", # Avoid specifying long messages outside the exception class
    "EM101", # Exception must not use a string literal, assign to variable first
    "EM102", # Exception must not use an f-string literal, assign to variable first
    "RUF001", # String contains ambiguous `с` (CYRILLIC SMALL LETTER ES)
    "RUF002", # Docstring contains ambiguous `с` (CYRILLIC SMALL LETTER ES).
    "RUF003", # Comment contains ambiguous `с` (CYRILLIC SMALL LETTER ES)
    "PT003", # `scope='function'` is implied in `@pytest.fixture()`
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "RET504", # Unnecessary assignment to `user` before `return` statement
    "N999", # Invalid module name
    "COM812", # Explicitly concatenated string should be implicitly concatenated
    "N815", # Variable in class scope should not be mixedCase
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "D400", # First line should end with a period
    "D205", # 1 blank line required between summary line and description
    "B008", # Do not perform function call `Field` in argument defaults; instead, perform the call within the function
    "PTH123", # `open()` should be replaced by `Path.open()`
    "E501", # Line too long (127 > 120)
    "PERF401", # Use `list.extend` to create a transformed list
    "ASYNC230", # Async functions should not open files with blocking methods like `open`
    "TC001", # Move application import `arco.application.dto.notification.ReferralNotification` into a type-checking block
    "SIM103", # Return the condition directly
    "TC002", # Move third-party import `openai.types.chat.ChatCompletionMessageParam` into a type-checking block
    "DTZ007" # Naive datetime constructed using `datetime.datetime.strptime()` without %z"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
